gke-gclb-misc/caddy.yaml
# Create a caddy web server with self signed tls certificates for testing GSLB and GKE Gateways
apiVersion: v1
kind: Namespace
metadata:
  #labels:
  #  istio.io/rev: default
  name: caddy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy
        image: caddy:2-alpine
        imagePullPolicy: IfNotPresent
        command: ["caddy", "run", "--config", "/Caddyfile"]
        #env:
        #- name: ADMIN_USER
        #  valueFrom:
        #    secretKeyRef:
        #      name: basic-auth
        #      key: user
        #- name: ADMIN_PASSWORD
        #  valueFrom:
        #    secretKeyRef:
        #      name: basic-auth
        #      key: password
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        resources:
          limits:
            memory: 128Mi
        volumeMounts:
        - mountPath: /Caddyfile
          name: caddy-config
          subPath: Caddyfile
      volumes:
        - name: caddy-config
          configMap:
            name: caddy-config
            items:
              - key: Caddyfile
                path: Caddyfile
                mode: 0644
---
# This will create a named Standalone NEG for each zone where pods are deployed https://cloud.google.com/kubernetes-engine/docs/how-to/standalone-neg
# If name is omitted it will generate a name like: k8s1-CLUSTER_UID-NAMESPACE-SERVICE-PORT-RANDOM_HASH
apiVersion: "v1"
kind: "Service"
metadata:
  name: "caddy-sa-neg"
  namespace: caddy
  # https://cloud.google.com/kubernetes-engine/docs/concepts/service-load-balancer-parameters#service_parameters
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"443":{"name": "caddy-tls"}}}'
    # use pre-provisioning to create empty neg in zones without replicas https://docs.cloud.google.com/kubernetes-engine/docs/how-to/standalone-neg#pre-provisioning
spec:
  ports:
  - port: 443
    targetPort: 8443  # This is the listening port inside the container and should match the firewall rules
    protocol: TCP
    appProtocol: tls
    name: tls
  selector:
    app: caddy
  type: ClusterIP   # Can still use other types as well but ClusterIP is usually recommended
---
# Optional secondary service for testing caddy pods directly
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: caddy
  annotations:
    # https://cloud.google.com/kubernetes-engine/docs/how-to/internal-load-balancing#create
    networking.gke.io/load-balancer-type: "Internal"
    networking.gke.io/internal-load-balancer-allow-global-access: "true"
spec:
  ports:
  - port: 80
    targetPort: 8080
    appProtocol: http
    name: http
  - port: 443
    targetPort: 8443
    #appProtocol: https   #should be tls or unset for passthrough, https if terminated/re-established on ALB
    name: https
  selector:
    app: caddy
  type: LoadBalancer    # Could use ClusterIP instead, but internal NLB for direct testing of caddy can be useful
